--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,21 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
+    "@nextui-org/card": "^2.0.24",
+    "@nextui-org/react": "^2.2.9",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.0.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.17.12",
     "gitignore": "^0.7.0",
+    "lucide-react": "^0.308.0",
     "mdbootstrap": "^4.20.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +59,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "daisyui": "^4.4.6",
+    "tailwindcss": "^3.3.6"
   }
 }
