--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,14 +17,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "framer-motion": "^10.17.12",
     "gitignore": "^0.7.0",
     "lucide-react": "^0.308.0",
     "mdbootstrap": "^4.20.0",
+    "mongoose": "^8.0.4",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "react-router-dom": "^6.21.1",
