--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@sanity/cli": "^3.27.0",
     "@sanity/client": "^6.12.3",
+    "@sanity/image-url": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
